isl-rs/src/aff.rs

  pub fn isl_union_pw_aff_union_add(upa1: UnionPwAff, upa2: UnionPwAff) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_sub(upa1: UnionPwAff, upa2: UnionPwAff) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_coalesce(upa: UnionPwAff) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_gist(upa: UnionPwAff, context: UnionSet) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_gist_params(upa: UnionPwAff, context: Set) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_pullback_union_pw_multi_aff(upa: UnionPwAff, upma: UnionPwMultiAff) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_floor(upa: UnionPwAff) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_scale_val(upa: UnionPwAff, v: Val) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_scale_down_val(upa: UnionPwAff, v: Val) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_mod_val(upa: UnionPwAff, f: Val) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_align_params(upa: UnionPwAff, model: Space) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_intersect_params(upa: UnionPwAff, set: Set) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_intersect_domain_space(upa: UnionPwAff, space: Space) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_intersect_domain_union_set(upa: UnionPwAff, uset: UnionSet) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_intersect_domain(upa: UnionPwAff, uset: UnionSet) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_intersect_domain_wrapped_domain(upa: UnionPwAff, uset: UnionSet) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_intersect_domain_wrapped_range(upa: UnionPwAff, uset: UnionSet) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_subtract_domain_union_set(upa: UnionPwAff, uset: UnionSet) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_subtract_domain_space(upa: UnionPwAff, space: Space) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_subtract_domain(upa: UnionPwAff, uset: UnionSet) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_zero_union_set(upa: UnionPwAff) -> Option<UnionSet>;
  pub fn isl_union_map_from_union_pw_aff(upa: UnionPwAff) -> Option<UnionMap>;
  pub fn isl_union_pw_aff_bind_id(upa: UnionPwAff, id: Id) -> Option<UnionSet>;
  pub fn isl_union_pw_aff_read_from_str(ctx: CtxRef, str: Option<CStr>) -> Option<UnionPwAff>;
  pub fn isl_union_pw_aff_to_str(upa: UnionPwAffRef) -> Option<CString>;
  pub fn isl_printer_print_union_pw_aff(p: Printer, upa: UnionPwAffRef) -> Option<Printer>;
  pub fn isl_union_pw_aff_dump(upa: UnionPwAffRef) -> ();
  pub fn isl_multi_union_pw_aff_get_ctx(multi: MultiUnionPwAffRef) -> Option<CtxRef>;
  pub fn isl_multi_union_pw_aff_get_space(multi: MultiUnionPwAffRef) -> Option<Space>;
  pub fn isl_multi_union_pw_aff_get_domain_space(multi: MultiUnionPwAffRef) -> Option<Space>;
  pub fn isl_multi_union_pw_aff_get_list(multi: MultiUnionPwAffRef) -> Option<UnionPwAffList>;
  pub fn isl_multi_union_pw_aff_from_union_pw_aff_list(space: Space, list: UnionPwAffList) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_copy(multi: MultiUnionPwAffRef) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_free(multi: MultiUnionPwAff) -> *mut c_void;
  pub fn isl_multi_union_pw_aff_plain_is_equal(multi1: MultiUnionPwAffRef, multi2: MultiUnionPwAffRef) -> Bool;
  pub fn isl_multi_union_pw_aff_reset_user(multi: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_size(multi: MultiUnionPwAffRef) -> c_int;
  pub fn isl_multi_union_pw_aff_get_at(multi: MultiUnionPwAffRef, pos: c_int) -> Option<UnionPwAff>;
  pub fn isl_multi_union_pw_aff_get_union_pw_aff(multi: MultiUnionPwAffRef, pos: c_int) -> Option<UnionPwAff>;
  pub fn isl_multi_union_pw_aff_set_at(multi: MultiUnionPwAff, pos: c_int, el: UnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_set_union_pw_aff(multi: MultiUnionPwAff, pos: c_int, el: UnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_range_splice(multi1: MultiUnionPwAff, pos: c_uint, multi2: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_flatten_range(multi: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_flat_range_product(multi1: MultiUnionPwAff, multi2: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_range_product(multi1: MultiUnionPwAff, multi2: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_factor_range(multi: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_range_is_wrapping(multi: MultiUnionPwAffRef) -> Bool;
  pub fn isl_multi_union_pw_aff_range_factor_domain(multi: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_range_factor_range(multi: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_align_params(multi: MultiUnionPwAff, model: Space) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_from_range(multi: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_scale_val(multi: MultiUnionPwAff, v: Val) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_scale_down_val(multi: MultiUnionPwAff, v: Val) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_scale_multi_val(multi: MultiUnionPwAff, mv: MultiVal) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_scale_down_multi_val(multi: MultiUnionPwAff, mv: MultiVal) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_mod_multi_val(multi: MultiUnionPwAff, mv: MultiVal) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_add(multi1: MultiUnionPwAff, multi2: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_sub(multi1: MultiUnionPwAff, multi2: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_neg(multi: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_zero(space: Space) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_involves_nan(multi: MultiUnionPwAffRef) -> Bool;
  pub fn isl_multi_union_pw_aff_dim(multi: MultiUnionPwAffRef, type_: DimType) -> c_int;
  pub fn isl_multi_union_pw_aff_drop_dims(multi: MultiUnionPwAff, type_: DimType, first: c_uint, n: c_uint) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_find_dim_by_name(multi: MultiUnionPwAffRef, type_: DimType, name: Option<CStr>) -> c_int;
  pub fn isl_multi_union_pw_aff_find_dim_by_id(multi: MultiUnionPwAffRef, type_: DimType, id: IdRef) -> c_int;
  pub fn isl_multi_union_pw_aff_get_dim_id(multi: MultiUnionPwAffRef, type_: DimType, pos: c_uint) -> Option<Id>;
  pub fn isl_multi_union_pw_aff_set_dim_name(multi: MultiUnionPwAff, type_: DimType, pos: c_uint, s: Option<CStr>) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_set_dim_id(multi: MultiUnionPwAff, type_: DimType, pos: c_uint, id: Id) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_get_tuple_name(multi: MultiUnionPwAffRef, type_: DimType) -> Option<CStr>;
  pub fn isl_multi_union_pw_aff_has_tuple_id(multi: MultiUnionPwAffRef, type_: DimType) -> Bool;
  pub fn isl_multi_union_pw_aff_get_tuple_id(multi: MultiUnionPwAffRef, type_: DimType) -> Option<Id>;
  pub fn isl_multi_union_pw_aff_set_tuple_name(multi: MultiUnionPwAff, type_: DimType, s: Option<CStr>) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_set_tuple_id(multi: MultiUnionPwAff, type_: DimType, id: Id) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_reset_tuple_id(multi: MultiUnionPwAff, type_: DimType) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_from_multi_aff(ma: MultiAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_from_union_pw_aff(upa: UnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_from_multi_pw_aff(mpa: MultiPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_multi_val_on_domain(domain: UnionSet, mv: MultiVal) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_multi_aff_on_domain(domain: UnionSet, ma: MultiAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_pw_multi_aff_on_domain(domain: UnionSet, pma: PwMultiAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_floor(mupa: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_intersect_domain(mupa: MultiUnionPwAff, uset: UnionSet) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_intersect_params(mupa: MultiUnionPwAff, params: Set) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_intersect_range(mupa: MultiUnionPwAff, set: Set) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_domain(mupa: MultiUnionPwAff) -> Option<UnionSet>;
  pub fn isl_multi_union_pw_aff_coalesce(mupa: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_gist(mupa: MultiUnionPwAff, context: UnionSet) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_gist_params(mupa: MultiUnionPwAff, context: Set) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_apply_aff(mupa: MultiUnionPwAff, aff: Aff) -> Option<UnionPwAff>;
  pub fn isl_multi_union_pw_aff_apply_multi_aff(mupa: MultiUnionPwAff, ma: MultiAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_apply_pw_aff(mupa: MultiUnionPwAff, pa: PwAff) -> Option<UnionPwAff>;
  pub fn isl_multi_union_pw_aff_apply_pw_multi_aff(mupa: MultiUnionPwAff, pma: PwMultiAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_pullback_union_pw_multi_aff(mupa: MultiUnionPwAff, upma: UnionPwMultiAff) -> Option<MultiUnionPwAff>;
  pub fn isl_union_pw_multi_aff_from_multi_union_pw_aff(mupa: MultiUnionPwAff) -> Option<UnionPwMultiAff>;
  pub fn isl_multi_union_pw_aff_union_add(mupa1: MultiUnionPwAff, mupa2: MultiUnionPwAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_from_union_pw_multi_aff(upma: UnionPwMultiAff) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_from_union_map(umap: UnionMap) -> Option<MultiUnionPwAff>;
  pub fn isl_union_map_from_multi_union_pw_aff(mupa: MultiUnionPwAff) -> Option<UnionMap>;
  pub fn isl_multi_union_pw_aff_zero_union_set(mupa: MultiUnionPwAff) -> Option<UnionSet>;
  pub fn isl_multi_union_pw_aff_bind(mupa: MultiUnionPwAff, tuple: MultiId) -> Option<UnionSet>;
  pub fn isl_multi_union_pw_aff_extract_multi_pw_aff(mupa: MultiUnionPwAffRef, space: Space) -> Option<MultiPwAff>;
  pub fn isl_multi_union_pw_aff_read_from_str(ctx: CtxRef, str: Option<CStr>) -> Option<MultiUnionPwAff>;
  pub fn isl_multi_union_pw_aff_to_str(mupa: MultiUnionPwAffRef) -> Option<CString>;
  pub fn isl_printer_print_multi_union_pw_aff(p: Printer, mupa: MultiUnionPwAffRef) -> Option<Printer>;
  pub fn isl_multi_union_pw_aff_dump(mupa: MultiUnionPwAffRef) -> ();
  pub fn isl_aff_list_get_ctx(list: AffListRef) -> Option<CtxRef>;
  pub fn isl_aff_list_from_aff(el: Aff) -> Option<AffList>;
  pub fn isl_aff_list_alloc(ctx: CtxRef, n: c_int) -> Option<AffList>;
  pub fn isl_aff_list_copy(list: AffListRef) -> Option<AffList>;
  pub fn isl_aff_list_free(list: AffList) -> *mut c_void;
  pub fn isl_aff_list_add(list: AffList, el: Aff) -> Option<AffList>;
  pub fn isl_aff_list_insert(list: AffList, pos: c_uint, el: Aff) -> Option<AffList>;
  pub fn isl_aff_list_drop(list: AffList, first: c_uint, n: c_uint) -> Option<AffList>;
  pub fn isl_aff_list_clear(list: AffList) -> Option<AffList>;
  pub fn isl_aff_list_swap(list: AffList, pos1: c_uint, pos2: c_uint) -> Option<AffList>;
  pub fn isl_aff_list_reverse(list: AffList) -> Option<AffList>;
  pub fn isl_aff_list_concat(list1: AffList, list2: AffList) -> Option<AffList>;
  pub fn isl_aff_list_size(list: AffListRef) -> c_int;
  pub fn isl_aff_list_n_aff(list: AffListRef) -> c_int;
  pub fn isl_aff_list_get_at(list: AffListRef, index: c_int) -> Option<Aff>;
  pub fn isl_aff_list_get_aff(list: AffListRef, index: c_int) -> Option<Aff>;
  pub fn isl_aff_list_set_aff(list: AffList, index: c_int, el: Aff) -> Option<AffList>;
